force-app/main/default/objects/Case/fields/Entire_Career_Page_Partial_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Entire_Career_Page_Partial_Campaign__c</fullName>
    <description>RO - 2458</description>
    <inlineHelpText>Is the entire career page included in the campaign or only certain jobs?</inlineHelpText>
    <label>Entire Career Page / Partial Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entire Career Page</fullName>
            </value>
            <value>
                <fullName>Partial Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>