force-app/main/default/objects/Case/fields/Estimated_Wallet_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Wallet_Size__c</fullName>
    <formula>Account.Estimated_Wallet_Size__c</formula>
    <label>Estimated Wallet Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>