force-app/main/default/objects/Case/fields/Extended_Segment__c.field-meta.xml
<CustomField>
    <fullName>Extended_Segment__c</fullName>
    <description>Franca&apos;s request for reporting</description>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Extended Segment</label>
    <type>Text</type>
</CustomField>