force-app/main/default/objects/Case/fields/Feedimport__c.field-meta.xml
<CustomField>
    <fullName>Feedimport__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>Will jobs be imported via Feed to our RP?</inlineHelpText>
    <label>Feedimport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo_Default_Empty</valueSetName>
    </valueSet>
</CustomField>