force-app/main/default/objects/Case/fields/Filter_Criteria_for_REACH_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria_for_REACH_Jobs__c</fullName>
    <description>RO - 2458</description>
    <inlineHelpText>Filter Criteria for REACH Jobs</inlineHelpText>
    <label>Filter Criteria for REACH Jobs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>