force-app/main/default/objects/Case/fields/Filter_Criteria_for_Screening_Questions__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria_for_Screening_Questions__c</fullName>
    <description>RO - 2458</description>
    <inlineHelpText>Filter Criteria for Screening Question sets</inlineHelpText>
    <label>Filter Criteria for Screening Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>