force-app/main/default/objects/Case/fields/First_Reaction_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Reaction_Time__c</fullName>
    <description>Time between created Date and first Status Change</description>
    <formula>MIN(
IF(Time_Created_To_On_Hold__c =0 ,          999999,  Time_Created_To_On_Hold__c) ,
IF(Time_Created_to_Escalated__c =0,         999999,  Time_Created_to_Escalated__c ) ,
IF(Time_Created_To_Closed__c =0,            999999,  Time_Created_To_Closed__c) ,
IF(Time_Created_to_Preview_Sent__c =0,      999999,  Time_Created_to_Preview_Sent__c) ,
IF(Time_Created_To_Job_Live__c =0,          999999,  Time_Created_To_Job_Live__c) ,
IF(Time_Created_to_Discussion__c =0,        999999,  Time_Created_to_Discussion__c) ,
IF(Time_Created_to_Go_Live_Scheduled__c =0, 999999,  Time_Created_to_Go_Live_Scheduled__c) ,
IF(Time_Created_to_Lost__c =0,              999999,  Time_Created_to_Lost__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time between created Date and first Status Change</inlineHelpText>
    <label>First Reaction Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>