force-app/main/default/objects/Case/fields/fmlCompanyBackendLink__c.field-meta.xml
<CustomField>
    <fullName>fmlCompanyBackendLink__c</fullName>
    <formula>Account.fmlCompanyBackendLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Backend Link</label>
    <type>Text</type>
</CustomField>