force-app/main/default/objects/Case/fields/fmlContactEmail__c.field-meta.xml
<CustomField>
    <fullName>fmlContactEmail__c</fullName>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Contact Email</label>
    <type>Text</type>
</CustomField>