force-app/main/default/objects/Case/fields/fmlContactLastName__c.field-meta.xml
<CustomField>
    <fullName>fmlContactLastName__c</fullName>
    <formula>Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Name</label>
    <type>Text</type>
</CustomField>