force-app/main/default/objects/Case/fields/fmlDialMobile__c.field-meta.xml
<CustomField>
    <fullName>fmlDialMobile__c</fullName>
    <formula>HYPERLINK(&quot;CALLTO:&quot;&amp; Contact.MobilePhone ,Contact.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dial Mobile</label>
    <type>Text</type>
</CustomField>