force-app/main/default/objects/Case/fields/fmlDialPhone__c.field-meta.xml
<CustomField>
    <fullName>fmlDialPhone__c</fullName>
    <formula>HYPERLINK(&quot;CALLTO:&quot;&amp; Contact.Phone ,Contact.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dial Phone</label>
    <type>Text</type>
</CustomField>