force-app/main/default/objects/Case/fields/fmlDialWebPhone__c.field-meta.xml
<CustomField>
    <fullName>fmlDialWebPhone__c</fullName>
    <formula>HYPERLINK(&quot;CALLTO:&quot;&amp;SuppliedPhone,SuppliedPhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dial WebPhone</label>
    <type>Text</type>
</CustomField>