force-app/main/default/objects/Case/fields/fmlJobLink__c.field-meta.xml
<CustomField>
    <fullName>fmlJobLink__c</fullName>
    <formula>HYPERLINK(&quot;https://production-backend.heyjobs.de/admin/jobs/&quot; &amp; txtJobId__c, &quot;Job Link&quot;)</formula>
    <label>Job Link</label>
    <type>Text</type>
</CustomField>