force-app/main/default/objects/Case/fields/fmlJobPreviewLink__c.field-meta.xml
<CustomField>
    <fullName>fmlJobPreviewLink__c</fullName>
    <formula>If(ISBLANK (txtJobId__c), &quot;Please enter JobID&quot;,

HYPERLINK(&quot;https://production-backend.heyjobs.de/admin/jobs/&quot; &amp; txtJobId__c &amp; &quot;?utm_source=email&amp;utm_medium=emp_job_preview&quot;, &quot;Job Preview Link&quot;))</formula>
    <inlineHelpText>The link with the UTM parameters for tracking the preview</inlineHelpText>
    <label>Job Preview Link</label>
    <type>Text</type>
</CustomField>