force-app/main/default/objects/Case/fields/fmlOnboardingSalutation__c.field-meta.xml
<CustomField>
    <fullName>fmlOnboardingSalutation__c</fullName>
    <formula>TEXT(refOnboardingContact__r.Salutation )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Salutation</label>
    <type>Text</type>
</CustomField>