force-app/main/default/objects/Case/fields/fmlPurchaseLink__c.field-meta.xml
<CustomField>
    <fullName>fmlPurchaseLink__c</fullName>
    <formula>HYPERLINK(&quot;https://production-backend.heyjobs.de/admin/jobs/&quot; &amp;  txtJobId__c , &quot;Job Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Link</label>
    <type>Text</type>
</CustomField>