force-app/main/default/objects/Case/fields/fmlSalutation__c.field-meta.xml
<CustomField>
    <fullName>fmlSalutation__c</fullName>
    <formula>TEXT(Contact.Salutation )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>