force-app/main/default/objects/Case/fields/fmlTime2OnboardingClosed__c.field-meta.xml
<CustomField>
    <fullName>fmlTime2OnboardingClosed__c</fullName>
    <formula>TimestampClosed__c  -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DELETE_Time2OnboardingClosed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>