force-app/main/default/objects/Case/fields/fmlTime2Preview__c.field-meta.xml
<CustomField>
    <fullName>fmlTime2Preview__c</fullName>
    <formula>Timestamp_Preview_Sent_Date__c - Created_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Created to Preview</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>