force-app/main/default/objects/Case/fields/fmlTime_Open_To_Preview__c.field-meta.xml
<CustomField>
    <fullName>fmlTime_Open_To_Preview__c</fullName>
    <formula>IF(
   ((Timestamp_Preview_Sent_Date__c  -  CreatedDate) * 1440/60)  &gt;= 62, 
   ((Timestamp_Preview_Sent_Date__c  -  CreatedDate) * 1440/60) - 62,
   (Timestamp_Preview_Sent_Date__c  -  CreatedDate) * 1440/60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Open To Preview</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>