force-app/main/default/objects/Case/fields/fmlTime_To_Onboarding_Closed__c.field-meta.xml
<CustomField>
    <fullName>fmlTime_To_Onboarding_Closed__c</fullName>
    <formula>IF(
   (( Timestamp_Closed_Date__c  - CreatedDate ) * 1440/60) &gt;= 62,
   (( Timestamp_Closed_Date__c  - CreatedDate ) * 1440/60) - 62,
    ( Timestamp_Closed_Date__c  - CreatedDate ) * 1440/60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DELETE_Time To Onboarding Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>