force-app/main/default/objects/Case/fields/fmlTimeDiscussionToJobLive__c.field-meta.xml
<CustomField>
    <fullName>fmlTimeDiscussionToJobLive__c</fullName>
    <formula>IF(
   (( Timestamp_Job_Live_Time__c -  Timestamp_Discussion_with_Customer_Time__c ) * 1440/60) &gt;= 62,
   (( Timestamp_Job_Live_Time__c -  Timestamp_Discussion_with_Customer_Time__c ) * 1440/60) - 62,
    ( Timestamp_Job_Live_Time__c -  Timestamp_Discussion_with_Customer_Time__c ) * 1440/60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Discussion To JobLive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>