force-app/main/default/objects/Case/fields/fmlTimeOnHoldToClose__c.field-meta.xml
<CustomField>
    <fullName>fmlTimeOnHoldToClose__c</fullName>
    <formula>IF(
   (( ClosedDate -  Timestamp_On_Hold_Time__c ) * 1440/60) &gt;= 62,
   (( ClosedDate -  Timestamp_On_Hold_Time__c ) * 1440/60) - 62,
    ( ClosedDate -  Timestamp_On_Hold_Time__c ) * 1440/60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time OnHold To Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>