force-app/main/default/objects/Case/fields/fmlTimeOpentoClose__c.field-meta.xml
<CustomField>
    <fullName>fmlTimeOpentoClose__c</fullName>
    <formula>IF( 
(( ClosedDate -  CreatedDate) * 1440/60) &gt;= 62, 
(( ClosedDate -  CreatedDate) * 1440/60) - 62, 
( ClosedDate -  CreatedDate) * 1440/60 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DELETE_Open to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>