force-app/main/default/objects/Case/fields/fmlTimePreviewToJobLive__c.field-meta.xml
<CustomField>
    <fullName>fmlTimePreviewToJobLive__c</fullName>
    <formula>IF(
   (( Timestamp_Job_Live_Time__c -  Timestamp_Preview_Sent_Date__c ) * 1440/60) &gt;= 62,
   (( Timestamp_Job_Live_Time__c -  Timestamp_Preview_Sent_Date__c ) * 1440/60) - 62,
    ( Timestamp_Job_Live_Time__c -  Timestamp_Preview_Sent_Date__c ) * 1440/60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Preview To JobLive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>