force-app/main/default/objects/Case/fields/Fraud_Check__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-1440</description>
    <inlineHelpText>Only set to true when fraud check process, described on confluence was completed</inlineHelpText>
    <label>Fraud Check</label>
    <type>Checkbox</type>
</CustomField>