force-app/main/default/objects/Case/fields/GTM_Motion_Case__c.field-meta.xml
<CustomField>
    <fullName>GTM_Motion_Case__c</fullName>
    <formula>TEXT( Account.GTM_Motion_Account__c )</formula>
    <label>GTM Motion Case</label>
    <type>Text</type>
</CustomField>