force-app/main/default/objects/Case/fields/HeyPaket_Classification__c.field-meta.xml
<CustomField>
    <fullName>HeyPaket_Classification__c</fullName>
    <formula>TEXT(Opportunity__r.HeyPaket_Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeyPaket Classification</label>
    <type>Text</type>
</CustomField>