force-app/main/default/objects/Case/fields/HeyPakete_End_Date__c.field-meta.xml
<CustomField>
    <fullName>HeyPakete_End_Date__c</fullName>
    <formula>Opportunity__r.HeyPaket_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeyPakete End Date</label>
    <type>Date</type>
</CustomField>