force-app/main/default/objects/Case/fields/HeyPakete_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HeyPakete_Start_Date__c</fullName>
    <formula>Opportunity__r.HeyPaket_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeyPakete Start Date</label>
    <type>Date</type>
</CustomField>