force-app/main/default/objects/Case/fields/HeyPakete_Type__c.field-meta.xml
<CustomField>
    <fullName>HeyPakete_Type__c</fullName>
    <formula>TEXT(Opportunity__r.HeyPaket_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the HeyPaket Type of the linked opp if it is a closed HeyPaket</inlineHelpText>
    <label>HeyPakete Type</label>
    <type>Text</type>
</CustomField>