force-app/main/default/objects/Case/fields/High_Urgency__c.field-meta.xml
<CustomField>
    <fullName>High_Urgency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO - 2251</description>
    <inlineHelpText>The value is set to True if the booking last 12 month&apos;s value of the related account is greater than 51000. This value is populated via a flow</inlineHelpText>
    <label>High Urgency</label>
    <type>Checkbox</type>
</CustomField>