force-app/main/default/objects/Case/fields/Hour_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Hour_of_Day__c</fullName>
    <description>RO-382 Used in reports, shows an Hour of a Day when the Case was created. &quot;Timezone Helpers&quot; custom setting was used (22 during Summer Time, 23 during Winter Timer)</description>
    <formula>VALUE(MID (TEXT ( CreatedDate - ( $Setup.Timezone_Helpers__c.H22_23__c  / 24)), 12, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour of Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>