force-app/main/default/objects/Case/fields/Ignore_in_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Ignore_in_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Go-Live Scheduled issue brought problems to CusOps&apos; metrics. Therefore, I add this field to extract such Cases from their normal reporting. Could be useful for other situations. Accessible only by admins.</description>
    <label>Ignore in Reporting</label>
    <type>Checkbox</type>
</CustomField>