force-app/main/default/objects/Case/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>RO - 2458</description>
    <inlineHelpText>Is it a Full Integration, a Feed Integration or an Excel Integration?</inlineHelpText>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Integration</fullName>
            </value>
            <value>
                <fullName>Feed Integration</fullName>
            </value>
            <value>
                <fullName>Excel Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>