force-app/main/default/objects/Case/fields/Is_SSSU__c.field-meta.xml
<CustomField>
    <fullName>Is_SSSU__c</fullName>
    <description>RO-1181</description>
    <formula>Account.Is_SSSU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SSSU?</label>
    <type>Checkbox</type>
</CustomField>