force-app/main/default/objects/Case/fields/Job_Feed_XML_or_JSON__c.field-meta.xml
<CustomField>
    <fullName>Job_Feed_XML_or_JSON__c</fullName>
    <description>RO-1759 , RO - 2458</description>
    <inlineHelpText>Provide the XML or JSON Feed for Jobimport</inlineHelpText>
    <label>Job Feed/ Kombo-Link/Excel-Tabelle</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>