force-app/main/default/objects/Case/fields/Job_Id_from_ATS__c.field-meta.xml
<CustomField>
    <fullName>Job_Id_from_ATS__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>JobID from ATS if job is missing in RP</inlineHelpText>
    <label>Job Id from ATS</label>
    <type>TextArea</type>
</CustomField>