force-app/main/default/objects/Case/fields/Jobboards__c.field-meta.xml
<CustomField>
    <fullName>Jobboards__c</fullName>
    <label>Jobboards</label>
    <length>255</length>
    <type>Text</type>
</CustomField>