force-app/main/default/objects/Case/fields/Jobs_amount__c.field-meta.xml
<CustomField>
    <fullName>Jobs_amount__c</fullName>
    <description>The number of job ads in parallel</description>
    <label>Jobs amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-3</fullName>
            </value>
            <value>
                <fullName>4-6</fullName>
            </value>
            <value>
                <fullName>7-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51-200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>