force-app/main/default/objects/Case/fields/Kununu_Score__c.field-meta.xml
<CustomField>
    <fullName>Kununu_Score__c</fullName>
    <label>Kununu Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>