force-app/main/default/objects/Case/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>blocked</fullName>
            </value>
            <value>
                <fullName>internal discussion (wfr internal)</fullName>
            </value>
            <value>
                <fullName>waiting for reply external (wfr external)</fullName>
            </value>
            <value>
                <fullName>Pre Kick-Off</fullName>
                <label>Onboarding Kick-Off</label>
            </value>
            <value>
                <fullName>Kick-Off</fullName>
                <label>Kampagnen Finalisierung</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>