force-app/main/default/objects/Case/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>