force-app/main/default/objects/Case/fields/Link_Out_URL_to_Job__c.field-meta.xml
<CustomField>
    <fullName>Link_Out_URL_to_Job__c</fullName>
    <description>RO - 2458</description>
    <inlineHelpText>Exemplary Link-Out URL to Job</inlineHelpText>
    <label>Link-Out URL to Job</label>
    <type>TextArea</type>
</CustomField>