force-app/main/default/objects/Case/fields/Linkout__c.field-meta.xml
<CustomField>
    <fullName>Linkout__c</fullName>
    <description>Reference Account Linkout Field</description>
    <formula>Account.Linkout__c</formula>
    <inlineHelpText>Reference Account Linkout Field</inlineHelpText>
    <label>Linkout</label>
    <type>Checkbox</type>
</CustomField>