force-app/main/default/objects/Case/fields/Livejobs__c.field-meta.xml
<CustomField>
    <fullName>Livejobs__c</fullName>
    <description>RO-1759</description>
    <inlineHelpText>Are there jobs that are already live on HeyJobs that need to be post integrated? If yes, please insert the jobreference in the description.</inlineHelpText>
    <label>Livejobs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo_Default_Empty</valueSetName>
    </valueSet>
</CustomField>