force-app/main/default/objects/Case/fields/Minimum_amount_Job_EUR__c.field-meta.xml
<CustomField>
    <fullName>Minimum_amount_Job_EUR__c</fullName>
    <label>Minimum amount/Job (EUR)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Jobs_amount__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>700</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>