force-app/main/default/objects/Case/fields/Minutes_to_SLA__c.field-meta.xml
<CustomField>
    <fullName>Minutes_to_SLA__c</fullName>
    <description>Shows minutes before SLA violation</description>
    <formula>IF( 
OR( ISBLANK( tysosla__First_Touch_Due__c ), NOT( ISBLANK(  tysosla__First_Touch__c )) ), null,
(tysosla__First_Touch_Due__c - NOW())*24*60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows minutes before SLA violation</inlineHelpText>
    <label>Minutes to SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>