force-app/main/default/objects/Case/fields/Monthly_Reach_Bonus_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Reach_Bonus_Budget__c</fullName>
    <description>RO - 2184</description>
    <inlineHelpText>REACH OG customers only. The amount of bonus budget that is supposed to be used for the REACH campaign per month</inlineHelpText>
    <label>Monthly Reach Bonus Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>