force-app/main/default/objects/Case/fields/Monthly_Reach_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Reach_Budget__c</fullName>
    <description>RO - 2067</description>
    <inlineHelpText>The amount of budget that is supposed to be used for the REACH campaign per month</inlineHelpText>
    <label>Monthly Reach Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>