force-app/main/default/objects/Case/fields/My_Account__c.field-meta.xml
<CustomField>
    <fullName>My_Account__c</fullName>
    <description>Shows True if the Account Owner is same as the current user / RO-765</description>
    <formula>Account.OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows True if the Account Owner is same as the current user</inlineHelpText>
    <label>My Account</label>
    <type>Checkbox</type>
</CustomField>