force-app/main/default/objects/Case/fields/New_budget_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>New_budget_expiration_date__c</fullName>
    <description>Please update the budget of the corresponding HeyPakete purchase in the Backend to the new date</description>
    <formula>IF(
    HeyPakete_Type__c = $Label.HeyPaket_Professional,
    HeyPakete_End_Date__c + 90,
    IF(
        HeyPakete_Type__c = $Label.HeyPaket_Ultimate,
        HeyPakete_End_Date__c + 180,
        HeyPakete_End_Date__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New budget expiration date</label>
    <type>Date</type>
</CustomField>