force-app/main/default/objects/Case/fields/No_of_Extended_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Extended_Days__c</fullName>
    <description>Field indicates the number a job should be extended for.</description>
    <inlineHelpText>Field indicates the number a job should be extended for.</inlineHelpText>
    <label>No of Extended Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>