force-app/main/default/objects/Case/fields/No_RP_Access__c.field-meta.xml
<CustomField>
    <fullName>No_RP_Access__c</fullName>
    <description>RO-1760</description>
    <inlineHelpText>The user should not receive access to the RP. It merely serves as a &quot;Dummy Recruiter&quot;</inlineHelpText>
    <label>No RP Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>