force-app/main/default/objects/Case/fields/Onboarding_Checkliste__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Checkliste__c</fullName>
    <inlineHelpText>Link to the Onboarding Checklist</inlineHelpText>
    <label>Onboarding Checkliste</label>
    <type>Url</type>
</CustomField>