force-app/main/default/objects/Case/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Parent_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>Shows all linked Opportunities to the Account and it&apos;s Parent Account</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>