force-app/main/default/objects/Case/fields/Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile__c</fullName>
    <description>Returns the profile name of the owner</description>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Profile</label>
    <type>Text</type>
</CustomField>