force-app/main/default/objects/Case/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Process enters the Parent Account depends on the Account ID</description>
    <label>Legacy Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases(ParentAccount)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>