force-app/main/default/objects/Case/fields/Parent_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Description__c</fullName>
    <description>Reference Account Field: Parent Account Description</description>
    <formula>Account.Parent_Account_Description__c</formula>
    <inlineHelpText>Reference Account Field: Parent Account Description</inlineHelpText>
    <label>Parent Account Description</label>
    <type>Text</type>
</CustomField>