force-app/main/default/objects/Case/fields/Parent_Child_Connection_needed__c.field-meta.xml
<CustomField>
    <fullName>Parent_Child_Connection_needed__c</fullName>
    <description>RO-1760</description>
    <inlineHelpText>Set to &quot;yes&quot; only if a Parent-Child Connection in BE is required. Typically, this action is irreversible.</inlineHelpText>
    <label>Parent Child Connection needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo_Default_Empty</valueSetName>
    </valueSet>
</CustomField>