force-app/main/default/objects/Case/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <description>RO - 2008</description>
    <formula>IF(
NOT(ISBLANK(Account.ParentId)),
HYPERLINK(
&apos;/lightning/r/Account/&apos; &amp; Account.ParentId &amp; &apos;/view&apos;,
Account.Parent.Name,
&apos;_self&apos;
),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>