force-app/main/default/objects/Case/fields/Partial_RP_Access_anonymized_applicatio__c.field-meta.xml
<CustomField>
    <fullName>Partial_RP_Access_anonymized_applicatio__c</fullName>
    <description>RO-1827</description>
    <inlineHelpText>The user has access to the recruiter portal but cannot view the application data.</inlineHelpText>
    <label>Partial RP Access (anonym.appl.data)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>