force-app/main/default/objects/Case/fields/Planned_Reach_Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Reach_Campaign_Start_Date__c</fullName>
    <description>RO - 2067</description>
    <inlineHelpText>Go Live Date of Reach campaigns.</inlineHelpText>
    <label>Legacy Planned Reach Campaign Start Date</label>
    <type>Date</type>
</CustomField>